--- a/listr_app/ListR/pubspec.yaml
+++ b/listr_app/ListR/pubspec.yaml
@@ -35,10 +35,11 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   http: ^0.13.5
-  flutter_secure_storage: ^5.1.0
   connectivity_plus: ^2.3.6
   device_info_plus: ^4.0.1
   toast: ^0.3.0
+  shared_preferences: ^2.0.15
+
 
 dev_dependencies:
   flutter_test:
