--- a/listr_app/ListR/pubspec.yaml
+++ b/listr_app/ListR/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   device_info_plus: ^4.0.1
   toast: ^0.3.0
   shared_preferences: ^2.0.15
+  dynamic_color: ^1.4.0
 
 
 dev_dependencies:
