--- a/listr_app/ListR/analysis_options.yaml
+++ b/listr_app/ListR/analysis_options.yaml
@@ -25,6 +25,9 @@ linter:
     # avoid_print: false  # Uncomment to disable the `avoid_print` rule
     prefer_single_quotes: true  # Uncomment to enable the `prefer_single_quotes` rule
     prefer_const_constructors_in_immutables: false
+    prefer_const_constructors: false
+    prefer_const_declarations: false
+
 
 # Additional information about this file can be found at
 # https://dart.dev/guides/language/analysis-options
