--- a/listr_app/ListR/pubspec.yaml
+++ b/listr_app/ListR/pubspec.yaml
@@ -40,6 +40,10 @@ dependencies:
   toast: ^0.3.0
   shared_preferences: ^2.0.15
   dynamic_color: ^1.4.0
+  desktop_window: ^0.4.0
+  loading_animation_widget: ^1.2.0+2
+
+
 
 
 dev_dependencies:
