--- a/listr-svc/ListR/ListR.Repositories/ListR.Repositories.csproj
+++ b/listr-svc/ListR/ListR.Repositories/ListR.Repositories.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Dapper" Version="2.0.123" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\ListR.Common\ListR.Common.csproj" />
     <ProjectReference Include="..\ListR.DataLayer\ListR.DataLayer.csproj" />
   </ItemGroup>
